# HabitTracker

./: .env  .env.example  .gitignore  Dockerfile  README.md  db_dump.json  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
habits/: models.py  serializers.py  tests.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_options.py  0004_habit_reminder_time.py
notifications/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
notifications/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py  cu.py  new_user.py
users/migrations/: 0001_initial.py  0002_user_telegram_chat_id.py
